--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>레이디 글러우 - 마취크림</title>
+    <title>레이디 글러우 - 울트라타투 마취크림</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -59,18 +59,10 @@
 
 <section>
     <div class="product">
-        <img src="path_to_image.jpg" alt="마취크림 이미지">
-        <h2>마취크림 A</h2>
-        <p>고급 마취 효과를 제공하는 크림입니다. 부드럽고 빠르게 흡수되어 편안한 사용감을 제공합니다.</p>
+        <img src="B.JPG" alt="울트라타투 마취크림 이미지">
+        <h2>울트라타투 마취크림</h2>
+        <p>울트라타투 마취크림은 고급 마취 효과를 제공하며, 빠르고 부드럽게 흡수되어 편안한 사용감을 선사합니다. 피부 자극이 적고 안전하게 사용할 수 있습니다.</p>
         <p class="price">가격: 30,000원</p>
-        <button>구매하기</button>
-    </div>
-
-    <div class="product">
-        <img src="path_to_image.jpg" alt="마취크림 B 이미지">
-        <h2>마취크림 B</h2>
-        <p>피부에 자극 없이 안전하게 사용할 수 있는 마취크림입니다. 고급 성분으로 더욱 효과적입니다.</p>
-        <p class="price">가격: 35,000원</p>
         <button>구매하기</button>
     </div>
 </section>
