--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 <section>
     <div class="product">
-        <img src="B.JPG" alt="울트라타투 마취크림 이미지">
+        <img src="https://raw.githubusercontent.com/username/repository/main/B.jpg" alt="울트라타투 마취크림 이미지">
         <h2>울트라타투 마취크림</h2>
         <p>울트라타투 마취크림은 고급 마취 효과를 제공하며, 빠르고 부드럽게 흡수되어 편안한 사용감을 선사합니다. 피부 자극이 적고 안전하게 사용할 수 있습니다.</p>
         <p class="price">가격: 30,000원</p>
